--- a/app/styles/components/_organizers.scss
+++ b/app/styles/components/_organizers.scss
@@ -73,7 +73,6 @@
 }
 
 .contact-us {
-  font-size: 0.9rem;
   font-weight: 300;
 
   .title {
