--- a/app/styles/components/_registration.scss
+++ b/app/styles/components/_registration.scss
@@ -120,13 +120,11 @@
 
   .ticket-details {
     display: block;
-    font-size: 0.9rem;
     font-weight: 300;
   }
 
   .ticket-note {
     text-align: center;
-    font-size: 0.9rem;
     color: $color-green;
     font-weight: 300;
     letter-spacing: 1px;
@@ -134,7 +132,6 @@
   }
 
   .tickets-checkout {
-    font-size: 0.9rem;
     font-weight: 300;
 
     a {
@@ -144,7 +141,6 @@
   }
 
   .additional-info {
-    font-size: 0.9rem;
     font-weight: 300;
 
     .title {
