--- a/app/styles/components/_sections.scss
+++ b/app/styles/components/_sections.scss
@@ -64,6 +64,10 @@ body {
 	position: relative;
 	font-size: $section-title-font-size;
 
+  @include respond-to("mobile") {
+    font-size: 0.5rem;
+  }
+
 	&:before {
 		@include translateX(-115%);
 		@include position(absolute, -20%);
@@ -73,12 +77,20 @@ body {
 		font-weight: 100;
 		font-style: italic;
 		font-size: 0.7rem;
+
+    @include respond-to("mobile") {
+      font-size: 0.6rem;
+    }
 	}
 }
 
 .section-subtitle {
 	font-size: $section-subtitle-font-size;
 	margin-left: -3px;
+
+  @include respond-to("mobile") {
+    font-size: 1.6rem;
+  }
 }
 
 .has-section-spacing {
