--- a/app/styles/components/_venue.scss
+++ b/app/styles/components/_venue.scss
@@ -15,17 +15,12 @@
     display: block;
   }
 
-  .location-venue {
-    font-size: 0.9rem;
-  }
-
   span.location-address {
     font-weight: 300;
   }
 
   .venue-description {
     font-weight: 300;
-    font-size: 0.9rem;
   }
 
   .venue-directions {
