--- a/app/styles/modules/_variables.scss
+++ b/app/styles/modules/_variables.scss
@@ -38,8 +38,8 @@ $nav-offset: 80px;
 $nav-link-color: $color-white;
 $nav-link-font-size: 0.6rem;
 $nav-link-vertical-spacing: 0.5rem;
-$nav-link-mobile-font-size: 1.5rem;
-$nav-link-mobile-vertical-spacing: 1.5rem;
+$nav-link-mobile-font-size: 1rem;
+$nav-link-mobile-vertical-spacing: 1.1rem;
 $nav-bullet-size: $border-width;
 $nav-bullet-offset: $nav-bullet-size * -1.5;
 $nav-bullet-opacity: 0.5;
